appId: teleport.example
---
- launchApp
- waitForAnimationToEnd

# Open the Persisted Portal example.
- runFlow:
    file: ../subflows/open-example.yml
    env:
      EXAMPLE_CATEGORY: "fixture"
      EXAMPLE_ID: "persisted_portal"

- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: PersistedPortalWithoutHost

# Step 1: Mount the <PortalHost> for the first time
# pending Portal should be teleported to proper host
- tapOn:
    id: "persisted_portal_toggle_host"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: PersistedPortalWithHost

# Step 2: Unmount the <PortalHost>
# teleported children should return to the local Portal location
- tapOn:
    id: "persisted_portal_toggle_host"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: PersistedPortalWithoutHost
      DIFF: 0.4

# Step 3: Mount the <PortalHost> again
# Portal should re-teleport its children to the new host instance
- tapOn:
    id: "persisted_portal_toggle_host"
- runFlow:
    file: ../subflows/assert-screenshot.yml
    env:
      SCREENSHOT: PersistedPortalWithHost
      DIFF: 0.4
