appId: teleport.example
---
- tapOn:
    text: "Open First Dialog"
- assertVisible:
    text: "First Dialog"
- swipe:
    label: "Press, move right, hold, and release Close First Dialog"
    start: 45%, 59%
    end: 55%, 59%
    duration: 3000
- assertNotVisible:
    text: "First Dialog"
